--- a/paper.tex
+++ b/paper.tex
@@ -12,20 +12,20 @@
 This is where the abstract goes.
 \end{abstract}
 
-\part*{Introduction}
+\section*{Introduction}
 
-\part{What is granular synthesis?}
-\section{Forms of granular synthesis}
+\section{What is granular synthesis?}
+\subsection{Forms of granular synthesis}
 here go forms
-\section{Existing instruments}
+\subsection{Existing instruments}
 here go instruments
 
-\part{How does granular synthesis work?}
-\section{Implementations}
-\section{Efficiency}
+\section{How does granular synthesis work?}
+\subsection{Implementations}
+\subsection{Efficiency}
 
-\part{How is granular synthesis used?}
-\section{Human control}
-\section{Playability}
+\section{How is granular synthesis used?}
+\subsection{Human control}
+\subsection{Playability}
 
 \end{document}
