Added benchmarking code (first version: envelope only).

--- a/paper.bib
+++ b/paper.bib
@@ -56,6 +56,15 @@
 	urldate = {2022-05-03}
 }
 
+@online{clouds,
+	author = {Gillet, É},
+	title = {Clouds},
+	note = {Source code},
+	year = {2014},
+	url = {https://github.com/pichenettes/eurorack/tree/master/clouds},
+	urldate = {06-05-2022}
+}
+
 @book{microsound,
   author    = {Roads, C},
   title     = {Microsound},
